--- a/etc/prometheus/prometheus.yaml
+++ b/etc/prometheus/prometheus.yaml
@@ -18,3 +18,6 @@ scrape_configs:
   - job_name: 'fastapi-app'
     static_configs:
     - targets: [ 'fastapi-app:8000' ]
+  - job_name: 'flask-app'
+    static_configs:
+    - targets: [ 'flask-app:9464' ]
