--- a/fastapi_app/requirements.txt
+++ b/fastapi_app/requirements.txt
@@ -1,4 +1,4 @@
-httpx==0.27.0
+# httpx==0.27.0
 fastapi==0.111.0
 uvicorn==0.30.1
 prometheus-client==0.20.0
@@ -7,3 +7,6 @@ opentelemetry-instrumentation-fastapi==0.46b0
 opentelemetry-instrumentation-logging==0.46b0
 opentelemetry-exporter-otlp==1.25.0
 prometheus_fastapi_instrumentator==7.0.0
+opentelemetry-instrumentation-sqlalchemy==0.46b0
+sqlmodel==0.0.21
+psycopg2-binary==2.9.9
