--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -135,10 +135,9 @@ services:
       - DATABASE_URL=postgresql://user:password@postgres-db:5432/db
     command:
       - 'python3'
-      # - 'simple_2_logs_and_traces.py'
-      # - 'simple_3_metrics.py'
-      # - 'simple_4_set_new_span_with_attr.py'
-      - 'simple_5_db.py'
+      # - 'simple_2_manual_traces.py'
+      # - 'simple_2_traces_logs_metrics.py'
+      - 'simple_2_traces_logs_metrics_db.py'
     ports:
       - "8000:8000"
     depends_on:
