--- a/etc/prometheus/prometheus.yaml
+++ b/etc/prometheus/prometheus.yaml
@@ -1,6 +1,10 @@
 global:
-  scrape_interval:     15s
-  evaluation_interval: 15s
+  scrape_interval: 5s
+  scrape_timeout: 3s
+  evaluation_interval: 5s
+
+rule_files:
+  - '/etc/prometheus/pyrra/*.yaml'
 
 scrape_configs:
   - job_name: 'prometheus'
