--- a/etc/prometheus/prometheus.yaml
+++ b/etc/prometheus/prometheus.yaml
@@ -6,6 +6,12 @@ global:
 rule_files:
   - '/etc/prometheus/pyrra/*.yaml'
 
+alerting:
+  alertmanagers:
+    - scheme: http
+      static_configs:
+        - targets: [ 'alertmanager:9093' ]
+
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
