--- a/etc/prometheus/prometheus.yaml
+++ b/etc/prometheus/prometheus.yaml
@@ -31,3 +31,9 @@ scrape_configs:
   - job_name: 'flask-app'
     static_configs:
     - targets: [ 'flask-app:9464' ]
+  - job_name: 'beyla'
+    static_configs:
+    - targets: [ 'beyla:8999' ]
+  - job_name: 'beyla-internal'
+    static_configs:
+    - targets: [ 'beyla:8998' ]
