--- a/etc/beyla/config.yml
+++ b/etc/beyla/config.yml
@@ -1,8 +1,11 @@
 discovery:
   instrument:
-    - open_ports: 8080
+    - open_ports: 8002
 
 log_level: DEBUG
+
+ebpf:
+  context_propagation: headers
 
 otel_traces_export:
   endpoint: http://otel-collector:4317
