--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,11 @@
 services:
-
-  # Tempo runs as user 10001, and docker compose creates the volume as root.
-  # As such, we need to chown the volume in order for Tempo to start correctly.
-  # init:
-  #   image: grafana/tempo:latest
-  #   user: root
-  #   entrypoint:
-  #     - "chown"
-  #     - "10001:10001"
-  #     - "/var/tempo"
-  #   volumes:
-  #     - ./data/tempo:/var/tempo
-
   # Database to store traces by Grafana Labs
   tempo:
     image: grafana/tempo:2.6.1  # tested on 2.6.1
     command: [ "-config.file=/etc/tempo.yaml" ]
     volumes:
       - ./etc/tempo/tempo.yaml:/etc/tempo.yaml
-      # - ./data/tempo:/var/tempo
+      - tempo-data:/var/tempo
     # ports:
       # - "3200:3200"     # tempo
       # - "9095:9095"     # tempo grpc
@@ -103,6 +90,7 @@ services:
     volumes:
       - ./etc/prometheus/prometheus.yaml:/etc/prometheus.yaml
       - prometheus_pyrra:/etc/prometheus/pyrra
+      - prometheus-data:/prometheus
     ports:
       - "9090:9090"
 
@@ -113,7 +101,7 @@ services:
       - "9093:9093"
     volumes:
       - ./etc/alertmanager/:/etc/alertmanager/
-      - alertmanager:/data
+      - alertmanager-data:/data
     command:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--log.level=debug'
@@ -284,4 +272,6 @@ services:
 
 volumes:
   prometheus_pyrra: {}
-  alertmanager: {}
+  alertmanager-data: {}
+  tempo-data: {}
+  prometheus-data: {}
